+ made the hero block well on the front page expand around text/imgs   it contains. + brought in the footer text so that it doesn't flow off the screen on   small devices. + on small devices cause the menu button to be displayed. + on small devices fixed up offset menu bar snafu.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,6 +2,13 @@ html {
     overflow-y: scroll;
 }
 
+.page-header h4{
+    margin-right:60px;
+}
+
+.well-large {
+    display: inline-block;
+}
 
 .h4-3em h4{
     padding-top: 20px;
@@ -110,12 +117,26 @@ img.twitter {
 }
 
 @media (max-width: 979px) {
-    .hidden-800 {
+  .hidden-800 {
         display:none !important;
     }
 
   .span12-tablet {
     width: 91.48936170212765% !important;
     *width: 91.43617021276594% !important;
+  }
+
+  body {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
+    margin-left: 0px;
+    margin-right: -20px;
+  }
+
+  .navbar .btn-navbar {
+    display: block;
   }
 }
